# prediction-market-pinocchio

./: Cargo.toml
client/: alley.test.ts  package.json
scripts/: init-local-usdc.ts  mint-local-assets.ts  package.json  resolve_market.ts
src/: errors.rs  lib.rs  log.rs  state.rs
src/instructions/: cancel_order.rs  claim_funds.rs  claim_winning.rs  create_market.rs  deposit_collateral.rs  emergency_refund.rs  initialize_orderbooks.rs  merge_token.rs  mod.rs  ping.rs  place_order.rs  resolve_market.rs  split_token.rs
src/instructions/place_order/: limit.rs  market.rs  merge.rs  mod.rs  split.rs
tests/: 01_create_market.test.ts  02_orderbooks_and_deposit.test.ts  03_limit_orders.test.ts  04_market_split_merge_cancel.test.ts  05_resolve_claim_emergency.test.ts  06_stress_and_scaling.test.ts  README.md  helpers.ts  package.json
